--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,9 @@ requests>=2.31.0
 PyYAML>=6.0.1
 torch>=2.7.1
 pandas>=2.3.0
-numpy>=2.3.1
+numpy>=2.2.6
 scikit-learn>=1.7.0
 tqdm>=4.67.1
-scikit-learn>=1.7.0
+sentence-transformers>=2.7.0
+faiss-cpu>=1.7.4
+python-dotenv>=1.0.0
